<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">How many squirrels 2.0</string>
    <string name="mainTabName">Главная</string>
    <string name="settingsPageTitle">Настройки</string>
    <string name="listViewTabName">Данные</string>
    <string name="graphViewTabName">Графики</string>
    <string name="settingsPage_ApplyButton">Применить</string>
    <string name="settingsPage_InputTextHint">Название измеряемых данных</string>
    <string name="settingsPage_WarningCleanData">Все данные будут удалены. Продолжить?</string>
    <string name="settingsPage_TextIsSet">Текст установлен</string>
    <string name="settingsPage_EmptyStr">Пожалуйста, введите название объекта</string>
    <string name="settingsPage_ConfirmAction">Подтвердите действие</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="apply">Применить</string>
    <string name="dataPage_current_time">Текущие время и дата</string>
    <string name="dataPage_select_time">Укажу дату и время сам</string>
    <string name="dataPage_inputHint">Количество объектов</string>
    <string name="dataPage_acceptAndMinimize">Ввести и свернуть</string>
    <string name="dataPage_acceptAndLookAtGraph">Ввести и посмотреть график</string>
    <string name="dataPage_addPageTitle">Ввод новых данных</string>
    <string name="dataPage_modifyPageTitle">Редактирование записи</string>
    <string name="dataPage_updateData">Применить изменения</string>
    <string name="dataPage_cancel">Отменить изменения</string>
    <string name="dataPage_setCurrentTime">Установить текущее время</string>
    <string name="dataPage_errInputAmount">Пожалуйста, введите количество</string>
    <string name="dataPage_successAddLine">Строка добавлена!</string>
    <string name="dataPage_successUpdateLine">Строка изменена!</string>
    <string name="dataPage_failUpdateLine">Извините, строка не была обновлена</string>
    <string name="dataPage_failAddLine">Извините, строка не была добавлена</string>
    <string name="indexPage_goToListview">Данные</string>
    <string name="indexPage_goToGraphView">Графики</string>
    <string name="indexPage_goToSettings">Настройки</string>
    <string name="graphViewPage_notEnoughData">Недостаточно данных для отображения графика</string>
    <string name="graphViewPage_displayDataLabel">Отобразить данные</string>
    <string name="graphViewPage_displayDataSinceLabel">c</string>
    <string name="graphViewPage_displayDataUntilLabel">по</string>
    <string name="graphViewPage_displayTimeRelated">Отобразить данные с учетом оси времени</string>
    <string name="graphViewPage_displayNotTimeRelated">Отобразить данные без учета оси времени</string>
    <string name="dataType_integer">Целый</string>
    <string name="dataType_decimal">Вещественный</string>
    <string name="dataType_enum">Перечислимый</string>
    <string name="dataType_momentOfTime">Момент времени</string>
    <string name="dataType_timePeriod">Интервал времени</string>
    <string name="settingsPage_chooseType">Выберите тип</string>
    <string name="settingsPage_paramName">Введите название</string>
    <string name="settingsPage_paramDescription">Дополнительное описание</string>
    <string name="settingsPage_emptyName">Пожалуйста, введите название</string>
    <string name="settingsPage_dialogTitle">Изменение измеряемых данных</string>
    <string name="dimension_years">л</string>
    <string name="dimension_year">г</string>
    <string name="dimension_months">м</string>
    <string name="dimension_days">д</string>
    <string name="dimension_hours">ч</string>
    <string name="dimension_minutes">мин</string>
    <string name="dimension_seconds">с</string>

</resources>
