<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/main_layout">

    <EditText
        android:id="@+id/date_edit"
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:layout_gravity="center_horizontal">
    </EditText>

    <EditText
        android:id="@+id/time_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:layout_gravity="center_horizontal">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataPage_setCurrentTime"
        android:id="@+id/set_current_time"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/amount_edit"
        android:layout_marginTop="25dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/dataPage_inputHint"
        android:layout_gravity="center_horizontal"
        android:inputType="number">
    </EditText>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataPage_cancel"
            android:id="@+id/cancel_button"
            android:layout_weight="1" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataPage_updateData"
            android:id="@+id/update_button"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>