<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indexPage_goToListview"
        android:id="@+id/go_to_list_view_activity"
        android:layout_marginTop="45dp"
        android:layout_alignEnd="@+id/go_to_graph_view_activity"
        android:layout_alignStart="@+id/go_to_graph_view_activity"
        android:onClick="onClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indexPage_goToGraphView"
        android:id="@+id/go_to_graph_view_activity"
        android:layout_below="@+id/go_to_list_view_activity"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@+id/go_to_settings"
        android:layout_alignStart="@+id/go_to_settings"
        android:onClick="onClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indexPage_goToSettings"
        android:id="@+id/go_to_settings"
        android:layout_below="@+id/go_to_graph_view_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="onClick"/>

</RelativeLayout>