<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/main_layout">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataPage_current_time"
            android:layout_marginLeft="25dp"
            android:checked="true"/>
        <RadioButton android:id="@+id/select_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataPage_select_time"
            android:layout_marginLeft="25dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/date_edit"
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:layout_gravity="center_horizontal">
    </EditText>

    <EditText
        android:id="@+id/time_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:layout_gravity="center_horizontal">
    </EditText>

    <EditText
        android:id="@+id/amount_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/dataPage_inputHint"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal">
    </EditText>

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layout_date_since"
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/graphViewPage_displayDataSinceLabel"
            android:id="@+id/since_text_view"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/amount_date_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:layout_gravity="center_horizontal"
                android:visibility="gone">
            </EditText>

            <EditText
                android:id="@+id/amount_time_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:layout_gravity="center_horizontal">
            </EditText>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_date_until"
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/graphViewPage_displayDataUntilLabel"
            android:id="@+id/until_text_view"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/amount_date_edit_until"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:layout_gravity="center_horizontal"
                android:visibility="gone">
            </EditText>

            <EditText
                android:id="@+id/amount_time_edit_until"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:layout_gravity="center_horizontal">
            </EditText>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dataPage_acceptAndMinimize"
            android:id="@+id/add_and_minimize"
            android:layout_weight="1"
            android:onClick="onClick"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/add_and_go_to_graph_view" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dataPage_acceptAndLookAtGraph"
            android:id="@+id/add_and_go_to_graph_view"
            android:onClick="onClick"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/add_and_minimize"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>